--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
   font-family: "Poppins", sans-serif;
   /* background-color: #035D78; */
 }
-
+a{
+  text-decoration: none;
+  color: black;
+}
 /* navbar */
 nav {
   background-color: #eef2f4;
@@ -25,6 +28,9 @@ nav {
   font-weight: 400;
   line-height: 30px;
   cursor: default;
+}
+#logo:hover{
+  cursor: pointer;
 }
 .menu {
   display: flex;
@@ -56,6 +62,8 @@ nav {
   border-radius: 500%;
   transition: all 400ms ease-in-out;
   position: absolute;
+}
+.quick-links:hover{
 }
 .quick-links:hover::after {
   top: 0;
@@ -158,6 +166,7 @@ button {
   cursor: pointer;
 }
 h1 {
+  cursor: default;
   position: relative;
   z-index: 100;
   font-size: max(3.5rem, 5.5vw);
@@ -210,6 +219,7 @@ h1 span {
   animation-direction: alternate;
 }
 h2 {
+  cursor: default;
   font-size: max(1.3rem, 1.7vw);
   font-weight: 300;
   position: relative;
@@ -1002,4 +1012,7 @@ h2 {
   align-items: center;
   gap: 1vw;
 
+}
+#jatt4{
+  cursor: pointer;
 }
