--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   font-family: "Poppins", sans-serif;
   /* background-color: #035D78; */
 }
-a{
+a {
   text-decoration: none;
   color: black;
 }
@@ -29,7 +29,7 @@ nav {
   line-height: 30px;
   cursor: default;
 }
-#logo:hover{
+#logo:hover {
   cursor: pointer;
 }
 .menu {
@@ -63,7 +63,7 @@ nav {
   transition: all 400ms ease-in-out;
   position: absolute;
 }
-.quick-links:hover{
+.quick-links:hover {
 }
 .quick-links:hover::after {
   top: 0;
@@ -344,14 +344,14 @@ h2 {
   }
   nav {
     top: 0;
-    background-color:#eef2f4;
+    background-color: #eef2f4;
     position: fixed;
     height: 30px;
     z-index: 10000;
     width: 100vw;
     border-bottom: 3px solid rgb(0, 0, 0);
   }
-  #jatt4{
+  #jatt4 {
     height: 80px;
   }
   .right {
@@ -622,7 +622,7 @@ h2 {
   /* box-shadow: 2px 0px 10px white; */
   /* width: 20vw; */
 
-  height: max(40vw, 400px);
+  height: max(35vw, 450px);
   margin-right: max(10vw, 10px);
   margin-top: 10px;
   margin-left: 10px;
@@ -632,7 +632,6 @@ h2 {
   margin-left: 30px;
   width: 400px;
   color: #eef2f4;
-  /* font-size: 1.4rem; */
   font-size: max(1.5vw, 1.1rem);
   margin-top: 10px;
   margin-right: 5px;
@@ -659,13 +658,15 @@ h2 {
     color: #eef2f4;
   }
   .my_img {
-    width: 50vw;
+    /* width: 70vw; */
+    width: min(70vw, 330px);
     height: auto;
     margin-right: 0;
     border-width: 1px;
   }
   .about_content {
-    font-size: 4vw;
+    /* font-size: 4vw; */
+    font-size: max(2.2vw, 17px);
     display: flex;
     font-weight: 310;
     flex-direction: column;
@@ -673,12 +674,12 @@ h2 {
     line-height: 4vh;
   }
   #initials {
-    font-size: 7vw;
+    font-size: max(4vw, 28px);
     align-self: center;
   }
   .per {
     align-self: center;
-    font-size: 4vw;
+    font-size: max(2.2vw, 17px);
     font-weight: 350;
   }
 }
@@ -991,9 +992,12 @@ h2 {
 
 .side_img1 {
   position: absolute;
-  left: 37vw;
-  width: max(25vw, 290px);
-  bottom: min(-14vh, 110px);
+  margin: 0 auto;
+  /* width: max(25vw, 290px);
+  bottom: min(-14vh, 110px); */
+  bottom: 0;
+  margin-bottom: -70px;
+  width: 230px;
   opacity: 1;
   rotate: -90deg;
   z-index: 10;
@@ -1002,17 +1006,16 @@ h2 {
   .side_img1 {
     display: none;
   }
-  #logo{
+  #logo {
     font-size: 20px;
     line-height: 20px;
   }
 }
-.something{
+.something {
   display: flex;
   align-items: center;
   gap: 1vw;
-
 }
-#jatt4{
+#jatt4 {
   cursor: pointer;
 }
