--- a/style.css
+++ b/style.css
@@ -344,12 +344,12 @@ h2 {
   }
   nav {
     top: 0;
-    background-color: #eef2f4;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.352), #eef2f4);
     position: fixed;
     height: 30px;
     z-index: 10000;
     width: 100vw;
-    border-bottom: 3px solid rgb(0, 0, 0);
+    border-bottom: 1.5px solid rgb(0, 0, 0);
   }
   #jatt4 {
     height: 80px;
