--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -71,7 +74,7 @@ nav {
   transition: all 250ms ease-in-out;
 }
 .quick-links:hover .links {
-  color: #9FC84E;
+  color: #9fc84e;
   transition-delay: 80ms;
 }
 .quick-links:hover {
@@ -939,7 +942,6 @@ h2 {
     font-size: 12vw;
   }
 
-
   .right4 {
     padding-top: 5vh;
     height: 15vh;
@@ -1149,25 +1151,127 @@ h2 {
   text-decoration: underline;
 }
 @media (max-width: 1000px) {
-    .more_projects_content {
-      margin: 0 5px;
-      font-size: 16px;
-      padding: 10px 20px;
-      border-radius: 15px;
-      background-color: white;
-      border: 1px solid black;
-    }
-    #yt {
-      text-decoration: none;
-      padding: 6px 10px;
-      background-color: #eef2f4;
-      border-radius: 10px;
-      font-weight: 500;
-      color: #ff4744;
-    }
-    #yt:hover {
-      text-decoration: underline;
-    }
+  .more_projects_content {
+    margin: 0 5px;
+    font-size: 16px;
+    padding: 10px 20px;
+    border-radius: 15px;
+    background-color: white;
+    border: 1px solid black;
   }
+  #yt {
+    text-decoration: none;
+    padding: 6px 10px;
+    background-color: #eef2f4;
+    border-radius: 10px;
+    font-weight: 500;
+    color: #ff4744;
+  }
+  #yt:hover {
+    text-decoration: underline;
+  }
+}
 
+.clubs {
+  display: flex;
+  flex-direction: column;
+  align-content: space-around;
+}
+.umsats {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.umsae {
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.rocket_org {
+  display: flex;
+  align-items: center;
+}
+.umsae_org {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.heading {
+  margin-left: 20px;
+  font-size: 20px;
+  line-height: 50px;
+  font-weight: 400;
+}
+#rocket_heading {
+  font-size: 50px;
+  font-weight: 600;
+  color: black;
+  letter-spacing: 3px;
+}
+#umsae_heading {
+  margin: 0;
+  margin-left: 5px;
+  color: #062442;
+}
+.umsae_whole_logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.bear {
+  margin-top: 20px;
+}
 
+.information {
+  display: flex;
+  flex-direction: column;
+}
+.description{
+  max-width: 700px;
+  padding: 0 15px 0 40px;
+  line-height: 30px;
+  position: relative;
+  color: #013342;
+}
+.clubs{
+  margin-left: 120px;
+  margin-right: 120px;
+}
+.umsats{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.description{
+  font-size: 16px;
+  line-height: 37px;
+  padding-top: 20px;
+}
+.rockets{
+  font-size: 48px;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+.bear{
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  justify-content: center;
+}
+.bold{
+  font-weight: 500;
+}
+@media (max-width: 1000px) {
+  .umsats {
+    margin-left: 0px;
+  }
+  .clubs {
+    margin: 0;
+  }
+}
