--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ nav {
   transition: all 250ms ease-in-out;
 }
 .quick-links:hover .links {
-  color: #9fc84e;
+  color: #ffffff;
   transition-delay: 80ms;
 }
 .quick-links:hover {
