--- a/style.css
+++ b/style.css
@@ -799,6 +799,8 @@ h2 {
     flex-direction: column-reverse;
   }
   .socials_card {
+    margin-top: 10px;
+    margin-bottom: 20px;
     width: 100vw;
     height: 100px;
     position: relative;
