--- a/style.css
+++ b/style.css
@@ -812,7 +812,8 @@ h2 {
     padding-bottom: 60px;
   }
   .phone {
-    font-size: 20px;
+    font-size: 19px;
+    font-weight: 400;
     line-height: 40px;
     position: relative;
     left: 0px;
@@ -820,7 +821,8 @@ h2 {
     /* line-height: 7vh; */
   }
   .mail {
-    font-size: 20px;
+    font-size: 19px;
+    font-weight: 400;
     line-height: 40px;
     /* font-size: 4vw; */
     /* line-height: 5vh; */
